Media Controls: fix issues with CTR metrics calculation.

There are 3 fixes:
 - Record visibility of CastOverlayButton;
 - Fix type in ClosedCaptionButton string;
 - Record clicks for PlayOverlayButton.

Bug: 785295
Change-Id: I2b57bbef248666aaa3683cd14907043ecf31aea3
Reviewed-on: https://chromium-review.googlesource.com/771795
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516781}