third_party/WebKit/Source/modules/media_controls/MediaControlsImpl.cpp
@@ -989,6 +989,9 @@ void MediaControlsImpl::UpdateOverflowMenuWanted() const {
   }
 
   MaybeRecordElementsDisplayed();
+
+  if (download_iph_manager_)
+    download_iph_manager_->UpdateInProductHelp();
 }
 
 void MediaControlsImpl::DefaultEventHandler(Event* event) {
@@ -1415,6 +1418,9 @@ void MediaControlsImpl::ComputeWhichControlsFit() {
     overlay_play_button_->SetDoesFit(does_fit);
   }
 
+  if (download_iph_manager_)
+    download_iph_manager_->UpdateInProductHelp();
+
   MaybeRecordElementsDisplayed();
 }
 
@@ -1437,6 +1443,7 @@ void MediaControlsImpl::MaybeRecordElementsDisplayed() const {
       current_time_display_.Get(),
       duration_display_.Get(),
       overlay_play_button_.Get(),
+      overlay_cast_button_.Get(),
   };
 
   // Record which controls are used.
@@ -1445,9 +1452,6 @@ void MediaControlsImpl::MaybeRecordElementsDisplayed() const {
       element->MaybeRecordDisplayed();
   }
   overflow_menu_->MaybeRecordDisplayed();
-
-  if (download_iph_manager_)
-    download_iph_manager_->UpdateInProductHelp();
 }
 
 void MediaControlsImpl::PositionPopupMenu(Element* popup_menu) {
