third_party/WebKit/Source/modules/media_controls/elements/MediaControlOverlayPlayButtonElement.cpp
@@ -78,8 +78,10 @@ void MediaControlOverlayPlayButtonElement::DefaultEventHandler(Event* event) {
 
     MediaElement().TogglePlayState();
     UpdateDisplayType();
+    MaybeRecordInteracted();
     event->SetDefaultHandled();
   }
+
   // TODO(mlamouri): should call MediaControlInputElement::DefaultEventHandler.
 }
 
