third_party/WebKit/Source/modules/media_controls/elements/MediaControlToggleClosedCaptionsButtonElement.cpp
@@ -49,7 +49,7 @@ bool MediaControlToggleClosedCaptionsButtonElement::HasOverflowButton() const {
 const char*
 MediaControlToggleClosedCaptionsButtonElement::GetNameForHistograms() const {
   return IsOverflowElement() ? "ClosedCaptionOverflowButton"
-                             : "ClosedCaptionsButton";
+                             : "ClosedCaptionButton";
 }
 
 void MediaControlToggleClosedCaptionsButtonElement::DefaultEventHandler(
